@startuml
'https://plantuml.com/class-diagram
class CommandBase
Abstract class SubSystemBase

BallTriggerComponents -|> BallTriggerComponentsBase
BallTrigger *-- BallTriggerComponentsBase
MoveBallTriggerBySpeed -|> CommandBase
SubSystemBase <|- BallTrigger
MoveBallTriggerBySpeed o-- BallTrigger

interface BallTriggerComponents{

  WPI_TalonSRX getMotor()
  Rev2mDistanceSensor getDistanceSensorUp()
  ColorSensorV3 getColorSensor()
}

class BallTriggerComponentsBase{
WPI_TalonSRX motor;
Rev2mDistanceSensor distanceSensor;
ColorSensorV3 colorSensor;

WPI_TalonSRX getMotor()
Rev2mDistanceSensor getDistanceSensorUp()
ColorSensorV3 getColorSensor()
}

class BallTrigger{
void periodic()
void moveTriggerBySpeed()
boolean isBallInPlace()
boolean isBallIdentified()
void stop()
}

class MoveBallTriggerBySpeed{
BallTrigger ballTrigger;
DoubleSupplier speedSupplier;

void execute()
void end()
}

@enduml